// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Icon /> snapshot should match snapshot 1`] = `
<Mrv2Icon
  name="accessibility"
>
  <Icon
    className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
    data-autoscale={false}
    data-test="accessibility"
    name="accessibility-regular"
    style={Object {}}
  >
    <mdc-icon
      class="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
      data-autoscale={false}
      data-test="accessibility"
      style={Object {}}
      suppressHydrationWarning={true}
    />
  </Icon>
</Mrv2Icon>
`;

exports[`<Icon /> snapshot should match snapshot with aria-label 1`] = `
<Mrv2Icon
  aria-label="This participant is muted"
  name="draft-indicator"
  weight="bold"
>
  <Icon
    aria-label="This participant is muted"
    className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
    data-autoscale={false}
    data-test="draft-indicator"
    name="draft-indicator-bold"
    style={Object {}}
  >
    <mdc-icon
      aria-label="This participant is muted"
      class="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
      data-autoscale={false}
      data-test="draft-indicator"
      style={Object {}}
      suppressHydrationWarning={true}
    />
  </Icon>
</Mrv2Icon>
`;

exports[`<Icon /> snapshot should match snapshot with ariaLabel 1`] = `
<Mrv2Icon
  ariaLabel="This participant is muted"
  name="draft-indicator"
  weight="bold"
>
  <Icon
    aria-label="This participant is muted"
    className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
    data-autoscale={false}
    data-test="draft-indicator"
    name="draft-indicator-bold"
    style={Object {}}
  >
    <mdc-icon
      aria-label="This participant is muted"
      class="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
      data-autoscale={false}
      data-test="draft-indicator"
      style={Object {}}
      suppressHydrationWarning={true}
    />
  </Icon>
</Mrv2Icon>
`;

exports[`<Icon /> snapshot should match snapshot with autoScale set to 'true' 1`] = `
<Mrv2Icon
  autoScale={true}
  name="accessibility"
>
  <Icon
    className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
    data-autoscale={true}
    data-scale={false}
    data-test="accessibility"
    name="accessibility-regular"
    style={Object {}}
  >
    <mdc-icon
      class="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
      data-autoscale={true}
      data-scale={false}
      data-test="accessibility"
      style={Object {}}
      suppressHydrationWarning={true}
    />
  </Icon>
</Mrv2Icon>
`;

exports[`<Icon /> snapshot should match snapshot with autoScale set to a percentage value 1`] = `
<Mrv2Icon
  autoScale={150}
  name="accessibility"
>
  <Icon
    className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
    data-autoscale={150}
    data-scale={false}
    data-test="accessibility"
    name="accessibility-regular"
    style={Object {}}
  >
    <mdc-icon
      class="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
      data-autoscale={150}
      data-scale={false}
      data-test="accessibility"
      style={Object {}}
      suppressHydrationWarning={true}
    />
  </Icon>
</Mrv2Icon>
`;

exports[`<Icon /> snapshot should match snapshot with className 1`] = `
<Mrv2Icon
  className="example-class"
  name="accessibility"
>
  <Icon
    className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink example-class"
    data-autoscale={false}
    data-test="accessibility"
    name="accessibility-regular"
    style={Object {}}
  >
    <mdc-icon
      class="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink example-class"
      data-autoscale={false}
      data-test="accessibility"
      style={Object {}}
      suppressHydrationWarning={true}
    />
  </Icon>
</Mrv2Icon>
`;

exports[`<Icon /> snapshot should match snapshot with fillColor 1`] = `
<Mrv2Icon
  fillColor="red"
  name="accessibility"
>
  <Icon
    className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
    data-autoscale={false}
    data-test="accessibility"
    name="accessibility-regular"
    style={
      Object {
        "--mdc-icon-fill-color": "red",
      }
    }
  >
    <mdc-icon
      class="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
      data-autoscale={false}
      data-test="accessibility"
      style={
        Object {
          "--mdc-icon-fill-color": "red",
        }
      }
      suppressHydrationWarning={true}
    />
  </Icon>
</Mrv2Icon>
`;

exports[`<Icon /> snapshot should match snapshot with id 1`] = `
<Mrv2Icon
  id="example-id"
  name="accessibility"
>
  <Icon
    className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
    data-autoscale={false}
    data-test="accessibility"
    id="example-id"
    name="accessibility-regular"
    style={Object {}}
  >
    <mdc-icon
      class="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
      data-autoscale={false}
      data-test="accessibility"
      style={Object {}}
      suppressHydrationWarning={true}
    />
  </Icon>
</Mrv2Icon>
`;

exports[`<Icon /> snapshot should match snapshot with invalid name 1`] = `
<Mrv2Icon
  name="invalid_icon_name"
>
  <Icon
    className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
    data-autoscale={false}
    data-test="invalid_icon_name"
    name="invalid_icon_name-regular"
    style={Object {}}
  >
    <mdc-icon
      class="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
      data-autoscale={false}
      data-test="invalid_icon_name"
      style={Object {}}
      suppressHydrationWarning={true}
    />
  </Icon>
</Mrv2Icon>
`;

exports[`<Icon /> snapshot should match snapshot with scale 1`] = `
<Mrv2Icon
  name="accessibility"
  scale={16}
>
  <Icon
    className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
    data-autoscale={false}
    data-scale={16}
    data-test="accessibility"
    name="accessibility-regular"
    style={Object {}}
  >
    <mdc-icon
      class="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
      data-autoscale={false}
      data-scale={16}
      data-test="accessibility"
      style={Object {}}
      suppressHydrationWarning={true}
    />
  </Icon>
</Mrv2Icon>
`;

exports[`<Icon /> snapshot should match snapshot with small icons 1`] = `
<Mrv2Icon
  name="info-badge"
  scale={14}
>
  <Icon
    className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
    data-autoscale={false}
    data-scale={14}
    data-test="info-badge"
    name="info-badge-regular"
    style={Object {}}
  >
    <mdc-icon
      class="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
      data-autoscale={false}
      data-scale={14}
      data-test="info-badge"
      style={Object {}}
      suppressHydrationWarning={true}
    />
  </Icon>
</Mrv2Icon>
`;

exports[`<Icon /> snapshot should match snapshot with style 1`] = `
<Mrv2Icon
  name="accessibility"
  style={
    Object {
      "color": "pink",
    }
  }
>
  <Icon
    className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
    data-autoscale={false}
    data-test="accessibility"
    name="accessibility-regular"
    style={
      Object {
        "color": "pink",
      }
    }
  >
    <mdc-icon
      class="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
      data-autoscale={false}
      data-test="accessibility"
      style={
        Object {
          "color": "pink",
        }
      }
      suppressHydrationWarning={true}
    />
  </Icon>
</Mrv2Icon>
`;

exports[`<Icon /> snapshot should match snapshot with title 1`] = `
<Mrv2Icon
  name="draft-indicator"
  title="You have a draft message"
  weight="bold"
>
  <Icon
    aria-label="You have a draft message"
    className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
    data-autoscale={false}
    data-test="draft-indicator"
    name="draft-indicator-bold"
    style={Object {}}
  >
    <mdc-icon
      aria-label="You have a draft message"
      class="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
      data-autoscale={false}
      data-test="draft-indicator"
      style={Object {}}
      suppressHydrationWarning={true}
    />
  </Icon>
</Mrv2Icon>
`;

exports[`<Icon /> snapshot should match snapshot with tooltip (children and placement) 1`] = `
<Mrv2Icon
  name="accessibility"
  tooltipProps={
    Object {
      "children": "Test",
      "placement": "bottom",
    }
  }
>
  <Tooltip
    placement="bottom"
    strategy="fixed"
    triggerComponent={
      <Icon
        className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
        data-autoscale={false}
        data-test="accessibility"
        name="accessibility-regular"
        style={Object {}}
        tabIndex={0}
      />
    }
    type="label"
  >
    <Popover
      addBackdrop={false}
      aria-hidden={false}
      boundary="scrollParent"
      color="primary"
      interactive={false}
      offsetDistance={5}
      offsetSkidding={0}
      placement="bottom"
      role="tooltip"
      setInstance={[Function]}
      showArrow={true}
      strategy="fixed"
      trigger="mouseenter focus"
      triggerComponent={
        <Icon
          aria-labelledby="test-ID"
          className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
          data-autoscale={false}
          data-test="accessibility"
          name="accessibility-regular"
          style={Object {}}
          tabIndex={0}
        />
      }
      variant="small"
    >
      <LazyTippy
        animation={false}
        appendTo="parent"
        hideOnClick={true}
        interactive={false}
        offset={
          Array [
            0,
            17,
          ]
        }
        onHidden={[Function]}
        placement="bottom"
        plugins={
          Array [
            Object {
              "defaultValue": true,
              "fn": [Function],
              "name": "hideOnEsc",
            },
          ]
        }
        popperOptions={
          Object {
            "modifiers": Array [
              Object {
                "enabled": true,
                "name": "arrow",
                "options": Object {
                  "element": "#arrow1",
                  "padding": 5,
                },
              },
              Object {
                "name": "preventOverflow",
                "options": Object {
                  "altAxis": true,
                  "boundariesElement": "scrollParent",
                  "padding": 8,
                },
              },
            ],
            "strategy": "fixed",
          }
        }
        render={[Function]}
        setInstance={[Function]}
        trigger="mouseenter focus"
      >
        <ForwardRef(TippyWrapper)
          animation={false}
          appendTo="parent"
          hideOnClick={true}
          interactive={false}
          offset={
            Array [
              0,
              17,
            ]
          }
          onHidden={[Function]}
          placement="bottom"
          plugins={
            Array [
              Object {
                "fn": [Function],
              },
              Object {
                "fn": [Function],
              },
              Object {
                "fn": [Function],
              },
              Object {
                "defaultValue": true,
                "fn": [Function],
                "name": "hideOnEsc",
              },
            ]
          }
          popperOptions={
            Object {
              "modifiers": Array [
                Object {
                  "enabled": true,
                  "name": "arrow",
                  "options": Object {
                    "element": "#arrow1",
                    "padding": 5,
                  },
                },
                Object {
                  "name": "preventOverflow",
                  "options": Object {
                    "altAxis": true,
                    "boundariesElement": "scrollParent",
                    "padding": 8,
                  },
                },
              ],
              "strategy": "fixed",
            }
          }
          render={[Function]}
          trigger="mouseenter focus"
        >
          <Tippy
            animation={false}
            appendTo="parent"
            hideOnClick={true}
            interactive={false}
            offset={
              Array [
                0,
                17,
              ]
            }
            onHidden={[Function]}
            placement="bottom"
            plugins={
              Array [
                Object {
                  "fn": [Function],
                },
                Object {
                  "fn": [Function],
                },
                Object {
                  "fn": [Function],
                },
                Object {
                  "defaultValue": true,
                  "fn": [Function],
                  "name": "hideOnEsc",
                },
              ]
            }
            popperOptions={
              Object {
                "modifiers": Array [
                  Object {
                    "enabled": true,
                    "name": "arrow",
                    "options": Object {
                      "element": "#arrow1",
                      "padding": 5,
                    },
                  },
                  Object {
                    "name": "preventOverflow",
                    "options": Object {
                      "altAxis": true,
                      "boundariesElement": "scrollParent",
                      "padding": 8,
                    },
                  },
                ],
                "strategy": "fixed",
              }
            }
            render={[Function]}
            trigger="mouseenter focus"
          >
            <Icon
              aria-labelledby="test-ID"
              className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
              data-autoscale={false}
              data-test="accessibility"
              name="accessibility-regular"
              style={Object {}}
              tabIndex={0}
            >
              <mdc-icon
                aria-labelledby="test-ID"
                class="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
                data-autoscale={false}
                data-test="accessibility"
                style={Object {}}
                suppressHydrationWarning={true}
              />
            </Icon>
            <Portal
              containerInfo={
                <div
                  data-tippy-root=""
                  id="tippy-2"
                  style="pointer-events: none; z-index: 9999;"
                >
                  
                </div>
              }
            />
          </Tippy>
        </ForwardRef(TippyWrapper)>
      </LazyTippy>
    </Popover>
    <div
      className="md-tooltip-label"
      id="test-ID"
    >
      Test
    </div>
  </Tooltip>
</Mrv2Icon>
`;

exports[`<Icon /> snapshot should match snapshot with tooltip (children) 1`] = `
<Mrv2Icon
  name="accessibility"
  tooltipProps={
    Object {
      "children": "Test",
    }
  }
>
  <Tooltip
    placement="top"
    strategy="fixed"
    triggerComponent={
      <Icon
        className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
        data-autoscale={false}
        data-test="accessibility"
        name="accessibility-regular"
        style={Object {}}
        tabIndex={0}
      />
    }
    type="label"
  >
    <Popover
      addBackdrop={false}
      aria-hidden={false}
      boundary="scrollParent"
      color="primary"
      interactive={false}
      offsetDistance={5}
      offsetSkidding={0}
      placement="top"
      role="tooltip"
      setInstance={[Function]}
      showArrow={true}
      strategy="fixed"
      trigger="mouseenter focus"
      triggerComponent={
        <Icon
          aria-labelledby="test-ID"
          className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
          data-autoscale={false}
          data-test="accessibility"
          name="accessibility-regular"
          style={Object {}}
          tabIndex={0}
        />
      }
      variant="small"
    >
      <LazyTippy
        animation={false}
        appendTo="parent"
        hideOnClick={true}
        interactive={false}
        offset={
          Array [
            0,
            17,
          ]
        }
        onHidden={[Function]}
        placement="top"
        plugins={
          Array [
            Object {
              "defaultValue": true,
              "fn": [Function],
              "name": "hideOnEsc",
            },
          ]
        }
        popperOptions={
          Object {
            "modifiers": Array [
              Object {
                "enabled": true,
                "name": "arrow",
                "options": Object {
                  "element": "#arrow1",
                  "padding": 5,
                },
              },
              Object {
                "name": "preventOverflow",
                "options": Object {
                  "altAxis": true,
                  "boundariesElement": "scrollParent",
                  "padding": 8,
                },
              },
            ],
            "strategy": "fixed",
          }
        }
        render={[Function]}
        setInstance={[Function]}
        trigger="mouseenter focus"
      >
        <ForwardRef(TippyWrapper)
          animation={false}
          appendTo="parent"
          hideOnClick={true}
          interactive={false}
          offset={
            Array [
              0,
              17,
            ]
          }
          onHidden={[Function]}
          placement="top"
          plugins={
            Array [
              Object {
                "fn": [Function],
              },
              Object {
                "fn": [Function],
              },
              Object {
                "fn": [Function],
              },
              Object {
                "defaultValue": true,
                "fn": [Function],
                "name": "hideOnEsc",
              },
            ]
          }
          popperOptions={
            Object {
              "modifiers": Array [
                Object {
                  "enabled": true,
                  "name": "arrow",
                  "options": Object {
                    "element": "#arrow1",
                    "padding": 5,
                  },
                },
                Object {
                  "name": "preventOverflow",
                  "options": Object {
                    "altAxis": true,
                    "boundariesElement": "scrollParent",
                    "padding": 8,
                  },
                },
              ],
              "strategy": "fixed",
            }
          }
          render={[Function]}
          trigger="mouseenter focus"
        >
          <Tippy
            animation={false}
            appendTo="parent"
            hideOnClick={true}
            interactive={false}
            offset={
              Array [
                0,
                17,
              ]
            }
            onHidden={[Function]}
            placement="top"
            plugins={
              Array [
                Object {
                  "fn": [Function],
                },
                Object {
                  "fn": [Function],
                },
                Object {
                  "fn": [Function],
                },
                Object {
                  "defaultValue": true,
                  "fn": [Function],
                  "name": "hideOnEsc",
                },
              ]
            }
            popperOptions={
              Object {
                "modifiers": Array [
                  Object {
                    "enabled": true,
                    "name": "arrow",
                    "options": Object {
                      "element": "#arrow1",
                      "padding": 5,
                    },
                  },
                  Object {
                    "name": "preventOverflow",
                    "options": Object {
                      "altAxis": true,
                      "boundariesElement": "scrollParent",
                      "padding": 8,
                    },
                  },
                ],
                "strategy": "fixed",
              }
            }
            render={[Function]}
            trigger="mouseenter focus"
          >
            <Icon
              aria-labelledby="test-ID"
              className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
              data-autoscale={false}
              data-test="accessibility"
              name="accessibility-regular"
              style={Object {}}
              tabIndex={0}
            >
              <mdc-icon
                aria-labelledby="test-ID"
                class="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
                data-autoscale={false}
                data-test="accessibility"
                style={Object {}}
                suppressHydrationWarning={true}
              />
            </Icon>
            <Portal
              containerInfo={
                <div
                  data-tippy-root=""
                  id="tippy-1"
                  style="pointer-events: none; z-index: 9999;"
                >
                  
                </div>
              }
            />
          </Tippy>
        </ForwardRef(TippyWrapper)>
      </LazyTippy>
    </Popover>
    <div
      className="md-tooltip-label"
      id="test-ID"
    >
      Test
    </div>
  </Tooltip>
</Mrv2Icon>
`;

exports[`<Icon /> snapshot should match snapshot with weight 1`] = `
<Mrv2Icon
  name="accessibility"
  weight="light"
>
  <Icon
    className="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
    data-autoscale={false}
    data-test="accessibility"
    name="accessibility-light"
    style={Object {}}
  >
    <mdc-icon
      class="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
      data-autoscale={false}
      data-test="accessibility"
      style={Object {}}
      suppressHydrationWarning={true}
    />
  </Icon>
</Mrv2Icon>
`;
